--- a/deneme.ipynb
+++ b/deneme.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from config import YT_API_KEY"
    ]
   },
   {
@@ -16,9 +17,7 @@
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "YT_API_KEY=\"AIzaSyDY3hqM0ZZvQghNmyNNOj1R6VBdm-R5DWo\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
